[project]
name = "CTFscan"
authors = [
  { name="p7e4", email="p7e4rs@gmail.com" }
]
description = "A web path scanner for CTF"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: aiohttp"
]

dependencies = [
  "aiohttp"
]

dynamic = ["version"]

[project.urls]
repository = "https://github.com/p7e4/CTFscan"
"Bug Tracker" = "https://github.com/p7e4/CTFscan/issues"

[project.scripts]
ctfscan = "ctfscan:run"

[tool.setuptools.package-data]
ctfscan = ["default.txt"]

[tool.setuptools.dynamic]
version = {attr = "ctfscan.__version__"}
