[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "CTFscan"
dynamic = ["version"]
authors = [{name="p7e4"}]
description = "A web path scanner for CTF"
readme = "README.md"
license = {text = "GPLv3"}
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: aiohttp"
]
keywords = []

dependencies = [
  "aiohttp"
]

[project.urls]
repository = "https://github.com/p7e4/CTFscan"
"Bug Tracker" = "https://github.com/p7e4/CTFscan/issues"

[project.scripts]
ctfscan = "ctfscan:run"

[tool.pdm.version]
source = "file"
path = "ctfscan/cli.py"
